--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,5 @@
 body{
-  background: url("http://www.siwallpaperhd.com/wp-content/uploads/2015/07/graffiti_art_wallpaper.jpg");
+  background: url("https://3.bp.blogspot.com/-PUkSnryRmps/WCIdP_LrMQI/AAAAAAAAMVs/2HBWo1KyKKI8zwvNdNc9KL9H4QKBNx4HQCLcB/s1600/wallpaper-digital-16.jpg");
   font-family: 'Kaushan Script', cursive;
   background-size:cover;
 }
